--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>مثال على زر النقر</title>
 </head>
 <body>
-    <button onclick="sayHello()">اضغط علي</button>
+    <button onclick="sayHello()">Click me</button>
 
     <script>
         function sayHello() {
